--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
     <groupId>org.example</groupId>
     <artifactId>MyNotepad</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <dropwizard.version>1.3.5</dropwizard.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
