--- a/etc/myNotepad.yml
+++ b/etc/myNotepad.yml
@@ -6,3 +6,46 @@ server:
   adminConnectors:
     - type: http
       port: 8990
+
+
+logging:
+  level: INFO
+  appenders:
+    - type: console
+      threshold: ALL
+      timeZone: IST
+
+database :
+  driverClass: com.mysql.jdbc.Driver
+  user: root
+  password: test
+  url: jdbc:mysql://localhost:3306/mynotepad
+  properties:
+    charSet: UTF-8
+    autoReconnect: true
+    checkConnectionWhileIdle: true
+    checkConnectionOnReturn: true
+    checkConnectionOnBorrow: true
+  maxWaitForConnection: 1s
+  validationQuery: "/* MyService Health Check */ SELECT 1"
+  minSize: 8
+  maxSize: 32
+  checkConnectionWhileIdle: true
+  evictionInterval: 10s
+  minIdleTime: 1 minute
+
+#
+#  database:
+#    driverClass: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/softwaredevelopercentral?autoReconnect=true&useSSL=false
+#    user: root
+#    password:
+#    maxWaitForConnection: 1s
+#    validationQuery: "SELECT 1"
+#    validationQueryTimeout: 3s
+#    minSize: 8
+#    maxSize: 32
+#    checkConnectionWhileIdle: false
+#    evictionInterval: 10s
+#    minIdleTime: 1 minute
+#    checkConnectionOnBorrow: true
